# basseera.app

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  first_boot_setup.sh  pyproject.toml  requirements.txt  setup.py  start_basseera.py
